--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,12 @@
 			<artifactId>gson</artifactId>
 			<version>2.7</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.6</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
